[gd_scene load_steps=11 format=3 uid="uid://bwjagmncfpjaa"]

[ext_resource type="Script" path="res://map_elements/headquarters.gd" id="1_smhg0"]
[ext_resource type="PackedScene" uid="uid://chfnc7kby80qp" path="res://assets/buildings/low_poly_store_building.glb" id="2_uiyfg"]
[ext_resource type="Material" uid="uid://bd8yuekioc8n" path="res://map_elements/highlight_material.tres" id="4_0jj30"]
[ext_resource type="AudioStream" uid="uid://y7cds7qtmplg" path="res://assets/sounds/mhmm.mp3" id="5_e6gbe"]
[ext_resource type="AudioStream" uid="uid://cvpjvvmpqq117" path="res://assets/sounds/dog.mp3" id="6_16jok"]
[ext_resource type="AudioStream" uid="uid://dsu4y8otybgw4" path="res://assets/sounds/burger.mp3" id="7_fik8u"]
[ext_resource type="AudioStream" uid="uid://by2h1thdiwupy" path="res://assets/sounds/drink_fill.mp3" id="8_yewbo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hcft0"]
size = Vector3(4.346, 3.725, 4.34)

[sub_resource type="BoxShape3D" id="BoxShape3D_f0j8l"]
size = Vector3(6, 2, 5)

[sub_resource type="PlaneMesh" id="PlaneMesh_7qpjj"]
material = ExtResource("4_0jj30")
size = Vector2(6, 5)

[node name="headquarters" type="Node3D" groups=["headquarters"]]
script = ExtResource("1_smhg0")
ejection_force = 5.0

[node name="collision_main" type="StaticBody3D" parent="."]

[node name="shape" type="CollisionShape3D" parent="collision_main"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6, 1.85663, 2.5)
shape = SubResource("BoxShape3D_hcft0")

[node name="building" parent="." instance=ExtResource("2_uiyfg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.6, 0, 2.5)

[node name="item_spawn_locations" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.30858, 2, 2.49602)

[node name="0" type="Marker3D" parent="item_spawn_locations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -0.375)

[node name="ice_cream_sound" type="AudioStreamPlayer" parent="item_spawn_locations/0"]
stream = ExtResource("5_e6gbe")
volume_db = 8.0
max_polyphony = 3
bus = &"SFX"

[node name="1" type="Marker3D" parent="item_spawn_locations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -0.125)

[node name="hot_dog_sound" type="AudioStreamPlayer" parent="item_spawn_locations/1"]
stream = ExtResource("6_16jok")
max_polyphony = 3
bus = &"SFX"

[node name="2" type="Marker3D" parent="item_spawn_locations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0.125)

[node name="burger_sound" type="AudioStreamPlayer" parent="item_spawn_locations/2"]
stream = ExtResource("7_fik8u")
volume_db = -6.0
max_polyphony = 3
bus = &"SFX"

[node name="3" type="Marker3D" parent="item_spawn_locations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0.375)

[node name="drink_sound" type="AudioStreamPlayer" parent="item_spawn_locations/3"]
stream = ExtResource("8_yewbo")
volume_db = 8.0
max_polyphony = 3
bus = &"SFX"

[node name="delivery_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.418233, 0, 0)
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="shape" type="CollisionShape3D" parent="delivery_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 2.5)
shape = SubResource("BoxShape3D_f0j8l")

[node name="highlight_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.57, 0.002, 2.5)
mesh = SubResource("PlaneMesh_7qpjj")

[node name="hint_label" type="Label3D" parent="highlight_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 1
double_sided = false
text = "Food loading zone"
